<resources>
    <string name="app_name">FlipGame</string>
    <string name="computer">computer</string>
    <string name="tictactoe">TicTacToe</string>
    <string name="playericon">playerIcon</string>
    <string name="choose_your_play_mode">Choose Your Play Mode</string>
    <string name="zero">zero</string>
    <string name="cross">cross</string>
    <string name="invalid_move">Invalid move</string>
    <string name="winner">YOU WIN!</string>
    <string name="next_step">Next Step</string>
    <string name="title_activity_puzzle">PuzzleActivity</string>
    <string name="home">Home</string>
    <string name="restart">Restart</string>
    <string name="start_game">Start Game</string>
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_condition"><![CDATA[Term & Condition]]></string>
    <string name="settings">Settings</string>
</resources>