<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/intersemibold"
                android:gravity="center"
                android:textSize="@dimen/_18ssp" />

            <ImageView
                android:id="@+id/ivCloseBtn"
                android:layout_alignParentEnd="true"
                android:src="@drawable/close"
                android:adjustViewBounds="true"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="wrap_content"/>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageViewZeroFx"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="0.5"
                android:contentDescription="@string/zero"
                android:padding="@dimen/_10sdp"
                app:srcCompat="@drawable/zerofx" />

            <ImageView
                android:id="@+id/imageViewCrossFx"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="0.5"
                android:alpha="0.5"
                android:contentDescription="@string/cross"
                android:padding="@dimen/_10sdp"
                app:srcCompat="@drawable/crossfx" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNextStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/intermedium"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/retry_button_background"
            android:paddingHorizontal="@dimen/_20sdp"
            android:text="@string/next_step"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.cardview.widget.CardView>