<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allbg"
    tools:context=".activity.SettingActivity">

    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Privacy Policy -->
    <TextView
        android:id="@+id/tvPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/button_create"
        android:drawablePadding="@dimen/_100sdp"
        android:fontFamily="@font/intersemibold"
        android:gravity="center"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/privacy_policy"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSettingsTitle" />

    <!-- Term & Condition -->
    <TextView
        android:id="@+id/tvTermCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_create"
        android:drawablePadding="10dp"
        android:fontFamily="@font/intersemibold"
        android:gravity="center"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/term_condition"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrivacyPolicy" />

    <!-- Rate Us -->
    <TextView
        android:id="@+id/tvRateUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_create"
        android:drawablePadding="10dp"
        android:fontFamily="@font/intersemibold"
        android:gravity="center"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/rate_us"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTermCondition" />

    <!-- Music Toggle -->
    <RelativeLayout
        android:id="@+id/llMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_create"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRateUs">

        <TextView
            android:id="@+id/tvMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/intersemibold"
            android:text="@string/music"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switchMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_20sdp" />
    </RelativeLayout>

    <!-- Sound Toggle -->
    <RelativeLayout
        android:id="@+id/llSound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_create"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llMusic">

        <TextView
            android:id="@+id/tvSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/intersemibold"
            android:text="@string/sound"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switchSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_weight="1" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/retry_button_background"
        android:contentDescription="@null"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_share"
        app:layout_constraintEnd_toStartOf="@+id/tvSettingsTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/retry_button_background"
        android:contentDescription="@null"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvSettingsTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>